# tenbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build-base.yml  deploy-website.yml  pr-check.yml  release.yml
docs/: build.md  cli.md  linux-update.md  release.md  tenboxd.md
packaging/build-base/: Dockerfile.bullseye  Dockerfile.jammy  README.md
packaging/debian/: build-deb.sh  control.in  postinst  postrm  prerm
packaging/systemd/: tenboxd.service
scripts/: install-linux.sh
src/cli/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  client.h
src/common/: image_source.cpp  image_source.h  vm_model.h
src/daemon/: CMakeLists.txt  cloud_protocol.cpp  cloud_protocol.h  cloud_tunnel.cpp  cloud_tunnel.h  daemon_types.cpp  daemon_types.h  ffmpeg_video_encoder.cpp  host_settings.cpp  host_settings.h  host_updater.cpp  host_updater.h  kvm_doctor.cpp  kvm_doctor.h  llm_proxy.cpp  llm_proxy.h  main.cpp  media_interfaces.h  opus_audio_encoder.cpp  remote_session.cpp  remote_session.h  remote_webrtc.cpp  remote_webrtc.h  resource_monitor.cpp  resource_monitor.h  rpc_server.cpp  rpc_server.h  runtime_manager.cpp  runtime_manager.h  vm_store.cpp  vm_store.h
src/ipc/: unix_socket.cpp  unix_socket.h
src/manager/: CMakeLists.txt  app_settings.cpp  app_settings.h  i18n.cpp  i18n.h  main.cpp  manager_service.cpp  manager_service.h  vm_forms.cpp  vm_forms.h
src/manager-macos/: TenBoxApp.swift
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  server.js  vite.config.js
(+43 files in other folders)
